apps/base/umami/middleware-stripprefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: umami-strip-prefix
  namespace: umami
spec:
  stripPrefix:
    prefixes:
      - /stats
